--- a/frontend/src/components/Automation/automation.css
+++ b/frontend/src/components/Automation/automation.css
@@ -1,15 +1,22 @@
 .automation-container {
   min-height: 100vh;
+  height: 100vh;
   background-color: #000000;
   color: rgba(255, 255, 255, 0.87);
   display: flex;
   flex-direction: column;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 .automation-title {
   position: fixed;
   top: 3rem;
-  left: calc(50% - 600px + 135px);
+  left: calc(50% - 600px + 156px);
   color: rgba(255, 255, 255, 0.87);
   text-align: left;
   z-index: 1000;
@@ -20,9 +27,10 @@
   flex: 1;
   display: flex;
   gap: 2rem;
-  padding: 7.5rem calc(3rem + 50px) 2rem calc(3rem + 50px);
+  padding: calc(7.5rem - 5px) calc(3rem + 20px) calc(2rem + 30px) 156px;
   overflow: hidden;
   min-height: 0;
+  height: 100%;
 }
 
 .automation-sidebar {
@@ -229,6 +237,8 @@
   overflow: hidden;
   min-width: 0;
   min-height: 0;
+  height: 100%;
+  width: 100%;
 }
 
 .browser-header {
