--- a/frontend/src/components/Automation/automation.css
+++ b/frontend/src/components/Automation/automation.css
@@ -42,6 +42,7 @@
   transition: all 0.2s ease;
   outline: none;
   margin-top: 7px;
+  margin-right: 250px;
 }
 
 .automation-menu-btn:hover {
@@ -74,7 +75,7 @@
 }
 
 .panel-header {
-  padding: 1rem;
+  padding: 0.75rem 1rem 0.5rem 1rem;
   flex-shrink: 0;
 }
 
