--- a/frontend/src/components/Profile/profile.css
+++ b/frontend/src/components/Profile/profile.css
@@ -4,6 +4,14 @@
   position: relative;
 }
 
+.profile-loading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: rgba(230, 230, 230, 0.9);
+  font-size: 1.4rem;
+}
+
 .welcome-message {
   position: fixed;
   top: 3rem;
