--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -50,7 +50,8 @@ button:hover {
 }
 button:focus,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  outline: none;
+  box-shadow: none;
 }
 
 /* Left Navigation Icons - Global */
